# MALOSS

./: README.md  maloss.js  maloss.py
npm/: README.md
tests/: pyproject.toml  requirements.txt  test-everything.sh
tests/clean/: package.json
tests/malicious/: package-lock.json  package.json  requirements.txt  simple.package.json
